Configured maven publishing @ build.gradle

--- a/XHTMLReportingEngine/build.gradle
+++ b/XHTMLReportingEngine/build.gradle
@@ -9,6 +9,8 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -27,4 +29,16 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId 'com.biel.xre'
+            artifactId 'XHTMLReportingEngine'
+            version '1.1'
+
+            from components.java
+        }
+    }
 }
