--- a/XHTMLReportingEngine/build.gradle
+++ b/XHTMLReportingEngine/build.gradle
@@ -23,7 +23,8 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
-	compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.itextpdf:itextg:5.5.9'
+	compile group: 'com.itextpdf.tool', name: 'xmlworker', version: '5.5.9'
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
