--- a/XHTMLReportingEngine/build.gradle
+++ b/XHTMLReportingEngine/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.6.2'
+   // compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.6.2'
+    //compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6.2'
 }
 
 publishing {
