Removed logging implementation and added export methods

--- a/XHTMLReportingEngine/build.gradle
+++ b/XHTMLReportingEngine/build.gradle
@@ -30,9 +30,7 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.6.2'
-   // compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.6.2'
-    //compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6.2'
+
 }
 
 publishing {
@@ -40,7 +38,7 @@ publishing {
         mavenJava(MavenPublication) {
             groupId 'com.biel.xre'
             artifactId 'XHTMLReportingEngine'
-            version '1.0.0'
+            version '1.0.5'
 
             from components.java
         }
@@ -48,3 +46,7 @@ publishing {
 }
 
 publishToMavenLocal.group = "publishing"
+
+def javaVersion = JavaVersion.VERSION_1_7;
+sourceCompatibility = javaVersion;
+targetCompatibility = javaVersion;
