--- a/XHTMLReportingEngine/build.gradle
+++ b/XHTMLReportingEngine/build.gradle
@@ -13,7 +13,7 @@ buildscript {
   }
 
   dependencies {
-     classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+     //classpath 'me.tatarka:gradle-retrolambda:3.2.5'
   }
 }
 
@@ -21,7 +21,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
-apply plugin: 'me.tatarka.retrolambda'
+//apply plugin: 'me.tatarka.retrolambda'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -63,8 +63,8 @@ publishing {
 
 publishToMavenLocal.group = "publishing"
 
-def javaVersion = JavaVersion.VERSION_1_8;
+def javaVersion = JavaVersion.VERSION_1_7;
 sourceCompatibility = javaVersion;
 targetCompatibility = javaVersion;
 
-retrolambda.javaVersion JavaVersion.VERSION_1_7
+//retrolambda.javaVersion JavaVersion.VERSION_1_7
