--- a/XHTMLReportingEngine/build.gradle
+++ b/XHTMLReportingEngine/build.gradle
@@ -28,6 +28,7 @@ repositories {
     // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
 }
 
 // In this section you declare the dependencies for your production and test code
@@ -41,6 +42,8 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+    
+    compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
 
 	compile 'net.sourceforge.streamsupport:streamsupport:1.5.1'
     compile 'net.sourceforge.streamsupport:streamsupport-cfuture:1.5.1'
